--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-size: normal;
+  font-size: medium;
 }
 
 #app {
@@ -7,7 +7,7 @@
   height: 100vh;
   margin: 0;
   padding: 1rem;
-  background-color: lightgray;
+  background-color: #f3f3f3;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   display: flex;
@@ -28,36 +28,69 @@ body {
 
 hr {
   width: 100%;
+  color: lightgrey;
 }
 
 table {
   width: 100%;
-  /* border-collapse: collapse; */
+  border-collapse: collapse;
 }
 
 thead tr {
-  background-color: lightgrey;
+  background-color: rgb(216, 216, 216);
+}
+
+tr {
+  display: flex;
+  justify-content: center;
 }
 
 th,
 td {
-  border: 1px solid grey;
+  /* border: 1px solid grey; */
   padding: .5rem;
+  flex: 0 1 20%;
+
+  display: flex;
+  justify-content: center;
 }
 
 button {
   all: unset;
   cursor: pointer;
-  background-color: lightgrey;
+  background-color: rgb(216, 216, 216);
   padding: .25rem .5rem;
-  border-radius: .25rem;
+  border-radius: .75rem;
+  color: #0077e6;
+}
+
+input {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: medium;
 }
 
 button:active {
   transform: scale(.9);
 }
 
+button:hover {
+  background-color: rgb(155, 155, 155);
+}
+
 .card {
+  background-color: rgba(255, 255, 255, 0);
+  border-radius: .5rem;
+  padding: 1rem;
+  overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.card-in {
   background-color: white;
   border-radius: .5rem;
   padding: 1rem;
@@ -68,17 +101,36 @@ button:active {
   gap: 1rem;
 }
 
-.card>h4 {
+.card>h4,
+.setName {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+.setName>input {
+  flex: 0 1 80%;
+  height: 1.5rem;
+  background-color: rgb(216, 216, 216);
+  border-radius: .5rem;
+  border: 0px;
+  padding: .5rem;
+}
+
+.setName>input:focus {
+  outline: 0px;
+}
+
+.setName>input:hover {
+  background-color: rgb(204, 204, 204);
+}
+
 .scrollable {
   overflow-y: scroll;
-  border: 1px solid lightgrey;
+  /* border: 1px solid lightgrey; */
   border-radius: .25rem;
   flex: 1;
+  padding: 1rem;
 }
 
 .modal {
