--- a/src/style.css
+++ b/src/style.css
@@ -194,11 +194,12 @@ input:hover {
 }
 
 .newRow:hover {
-  background-color: unset;
+  background-color: #f0f0f0;
 }
 
 .newRow {
   margin-top: .5rem;
+  background-color: #f0f0f0;
 }
 
 .number {
