--- a/src/style.css
+++ b/src/style.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   height: 100vh;
   margin: 0;
-  padding: 1rem;
+  /* padding: 1rem; */
   background-color: #f3f3f3;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
@@ -98,9 +98,10 @@ li:hover {
 li.selected {
   padding: 1rem;
   /* border: 2px solid #0077e6; */
-  border-bottom: 2px solid #0077e6;
+  /* border-bottom: 2px solid #0077e6; */
+  background-color: #0077e644;
   cursor: pointer;
-  /* border-radius: .25rem; */
+  border-radius: .25rem;
 }
 
 tbody tr:hover {
@@ -145,6 +146,7 @@ input:hover {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin: 2rem 1rem;
 }
 
 .card-in {
