--- a/src/style.css
+++ b/src/style.css
@@ -18,10 +18,6 @@
   flex: 1;
 }
 
-#app>.card:nth-child(1) {
-  flex: 0 1 20%;
-}
-
 body {
   margin: 0;
 }
@@ -61,15 +57,21 @@ button {
   color: #0077e6;
 }
 
-input {
-  display: flex;
-  align-items: center;
+input,
+select {
+  /* display: flex; */
+  /* align-items: center; */
   font-size: medium;
   background-color: rgb(216, 216, 216);
   border-radius: .5rem;
   border: 0px;
   height: 1rem;
+  width: 90%;
   padding: .5rem;
+}
+
+select {
+  height: 2rem;
 }
 
 h3 {
@@ -99,7 +101,7 @@ li.selected {
   padding: 1rem;
   /* border: 2px solid #0077e6; */
   /* border-bottom: 2px solid #0077e6; */
-  background-color: #0077e644;
+  background-color: rgb(242, 244, 255);
   cursor: pointer;
   border-radius: .25rem;
 }
@@ -129,6 +131,7 @@ input:focus {
   outline: 0px;
 }
 
+select:hover,
 input:hover {
   background-color: rgb(184, 184, 184);
 }
