--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,10 @@ ul {
   list-style-type: none;
 }
 
+select:focus {
+  outline: 0;
+}
+
 li:hover {
   padding: 1rem;
   background-color: rgb(242, 244, 255);
@@ -149,7 +153,7 @@ input:hover {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin: 2rem 1rem;
+  margin: 2rem 1rem 1rem;
 }
 
 .card-in {
