--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 :root {
   font-size: medium;
+  background-color: #f3f3f3;
 }
 
 #app {
@@ -11,7 +12,7 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 #app>.card {
@@ -160,8 +161,7 @@ input:hover {
   background-color: white;
   border-radius: .5rem;
   padding: 1rem;
-  overflow: hidden;
-
+  /* overflow: hidden; */
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -181,6 +181,7 @@ input:hover {
 
 .scrollable {
   overflow-y: scroll;
+  overflow-x: hidden;
   /* border: 1px solid lightgrey; */
   border-radius: .5rem;
   flex: 1;
