--- a/src/style.css
+++ b/src/style.css
@@ -52,10 +52,12 @@ td {
 button {
   all: unset;
   cursor: pointer;
-  background-color: rgb(216, 216, 216);
-  padding: .25rem .5rem;
+  padding: .5rem .5rem;
   border-radius: .75rem;
-  color: #0077e6;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 input,
@@ -68,11 +70,11 @@ select {
   border: 0px;
   height: 1rem;
   width: 90%;
-  padding: .5rem;
+  padding: 0.75rem;
 }
 
 select {
-  height: 2rem;
+  height: 2.5rem;
 }
 
 h3 {
@@ -106,9 +108,9 @@ li.selected {
   padding: 1rem;
   /* border: 2px solid #0077e6; */
   /* border-bottom: 2px solid #0077e6; */
-  background-color: rgb(242, 244, 255);
+  background-color: rgb(231, 234, 252);
   cursor: pointer;
-  border-radius: .25rem;
+  /* border-radius: .25rem; */
 }
 
 tbody tr:hover {
@@ -118,10 +120,6 @@ tbody tr:hover {
 
 button:active {
   transform: scale(.9);
-}
-
-button:hover {
-  background-color: rgb(155, 155, 155);
 }
 
 button:disabled,
@@ -141,8 +139,49 @@ input:hover {
   background-color: rgb(184, 184, 184);
 }
 
+.item-list-m {
+  display: flex;
+  justify-content: space-between;
+}
+
+.input-item-name {
+  color: #0077e6;
+  background-color: unset;
+  font-weight: bold;
+  font-size: large;
+  margin-top: 2rem;
+  width: fit-content;
+}
+
 .inputFill {
   background-color: unset;
+}
+
+.i-close {
+  fill: crimson;
+  padding: 0.1rem;
+}
+
+.i-close:hover {
+  background-color: rgb(184, 184, 184);
+  border-radius: 1rem;
+}
+
+.borderList {
+  border-bottom: 1px solid rgb(231, 234, 252);
+
+}
+
+.b-plus {
+  background-color: rgb(216, 216, 216);
+}
+
+.b-plus:hover {
+  background-color: rgb(184, 184, 184);
+}
+
+.i-plus {
+  fill: #0077e6;
 }
 
 .card {
