--- a/src/style.css
+++ b/src/style.css
@@ -12,10 +12,17 @@
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
   display: flex;
+  flex-direction: column;
   gap: 0.5rem;
 }
 
-#app>.card {
+@media (max-width: 750px) {
+  #app {
+    flex-direction: column-reverse;
+  }
+}
+
+.page>.card {
   flex: 1;
 }
 
@@ -80,7 +87,7 @@ select {
 h3 {
   display: flex;
   margin: 0%;
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
 }
 
 li {
@@ -164,7 +171,7 @@ input:hover {
 
 .i-close:hover {
   background-color: rgb(184, 184, 184);
-  border-radius: 1rem;
+  border-radius: .5rem;
 }
 
 .borderList {
@@ -193,7 +200,7 @@ input:hover {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin: 2rem 1rem 1rem;
+  margin: 1rem 1.5rem;
 }
 
 .card-in {
