--- a/src/style.css
+++ b/src/style.css
@@ -13,7 +13,6 @@
 
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
 }
 
 @media (max-width: 750px) {
@@ -76,7 +75,7 @@ select {
   border-radius: .5rem;
   border: 0px;
   height: 1rem;
-  width: 90%;
+  flex: 1 1 100%;
   padding: 0.75rem;
 }
 
@@ -108,7 +107,6 @@ li:hover {
   padding: 1rem;
   background-color: rgb(242, 244, 255);
   cursor: pointer;
-  border-radius: .2rem;
 }
 
 li.selected {
@@ -151,15 +149,6 @@ input:hover {
   justify-content: space-between;
 }
 
-.input-item-name {
-  color: #0077e6;
-  background-color: unset;
-  font-weight: bold;
-  font-size: large;
-  margin-top: 2rem;
-  width: fit-content;
-}
-
 .inputFill {
   background-color: unset;
 }
@@ -176,7 +165,6 @@ input:hover {
 
 .borderList {
   border-bottom: 1px solid rgb(231, 234, 252);
-
 }
 
 .b-plus {
@@ -191,16 +179,28 @@ input:hover {
   fill: #0077e6;
 }
 
+.liLast {
+  border-radius: 0 0 0 .5rem;
+}
+
+.liFirst {
+  border-radius: .5rem 0 0 0;
+}
+
+.liAlong {
+  border-radius: .5rem 0 0 .5rem;
+}
+
 .card {
   background-color: rgba(255, 255, 255, 0);
   border-radius: .5rem;
   padding: 1rem;
-  /* overflow: hidden; */
+  margin: 1rem 1rem;
+  overflow-x: hidden;
 
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin: 1rem 1.5rem;
 }
 
 .card-in {
@@ -208,6 +208,7 @@ input:hover {
   border-radius: .5rem;
   padding: 1rem;
   /* overflow: hidden; */
+
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -217,12 +218,6 @@ input:hover {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.setName>input {
-  flex: 0 1 80%;
-  height: 1.5rem;
-  padding: .5rem;
 }
 
 .scrollable {
@@ -256,6 +251,10 @@ input:hover {
 .newRow {
   margin-top: .5rem;
   background-color: #f0f0f0;
+}
+
+.nameField {
+  color: #0077e6
 }
 
 .number {
